core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/annotations/annotations-arity-mismatch.tessla
def @foo(a: Int)

@foo(5 * 3 + 27, 42)
in x: Events[Int]
out x